@@ -23,7 +23,7 @@ Type 'q()' to quit R.
 > YI <- runif(1000)
 > 
 > out <- tsearch(X, Y, T, XI, YI)
-> outn <- tsearchn(cbind(X, Y), T, cbind(XI, YI))
+> outn <- tsearchn(cbind(X, Y), T, cbind(XI, YI), fast=FALSE)
 > out <- tsearch(X, Y, T, XI, YI)
 > print(all(na.omit(out) == na.omit(outn$idx)))
 [1] TRUE
