@@ -21,7 +21,7 @@ Type 'q()' to quit R.
 > p <- cbind(x, y)
 > tri <- matrix(c(1, 2, 3), 1, 3)
 > # Should be in triangle #1
-> tsearchn(p, tri, cbind(-1, -1))
+> tsearchn(p, tri, cbind(-1, -1),fast=FALSE)
 $idx
 [1] 1
 
@@ -30,7 +30,7 @@ $p
 [1,]    1    0    0
 
 > # Should be in triangle #1
-> tsearchn(p, tri, cbind(1, -1))
+> tsearchn(p, tri, cbind(1, -1), fast=FALSE)
 $idx
 [1] 1
 
@@ -39,7 +39,7 @@ $p
 [1,]    0    0    1
 
 > # Should be in triangle #1
-> tsearchn(p, tri, cbind(-1, 1))
+> tsearchn(p, tri, cbind(-1, 1), fast=FALSE)
 $idx
 [1] 1
 
@@ -48,7 +48,7 @@ $p
 [1,]    0    1    0
 
 > # Should be in triangle #1
-> tsearchn(p, tri, cbind(-1/3, -1/3))
+> tsearchn(p, tri, cbind(-1/3, -1/3), fast=FALSE)
 $idx
 [1] 1
 
@@ -57,7 +57,7 @@ $p
 [1,] 0.3333333 0.3333333 0.3333333
 
 > # Should be outside triangle #1, so should return NA
-> tsearchn(p, tri, cbind(1, 1))
+> tsearchn(p, tri, cbind(1, 1), fast=FALSE)
 $idx
 [1] NA
 
